# python_testing_guide

./: .gitignore  .pre-commit-config.yaml  404.html  README.md  index.html  mkdocs.yml  pyproject.toml
docs/: guide.md  index.md  rules.md  sources.md  tutorial.md
guide/: index.html
rules/: index.html
search/: search_index.json
sources/: index.html
src/: calculator.py
src/level_1/: interface.py  session.py
src/level_2/: interface.py  session.py
src/level_3/: interface.py  session.py
src/level_4/: database.py  interface.py  session.py
src/level_5/: database.py  interface.py  session.py
src/level_6/: interface.py  session.py
src/level_7/: interface.py  session.py
src/level_8/: session.py
tests/: test_calculator.py
tests/level_0/: test_calculator.py
tests/level_1/: test_session.py
tests/level_2/: test_session.py
tests/level_3/: test_session.py
tests/level_4/: test_session.py
tests/level_5/: test_session.py
tests/level_6/: test_session.py
tests/level_7/: test_session.py
tests/level_8/: test_session.py
tutorial/: index.html
